--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Website</title>
+    <link rel="icon" href="img/favicon.png">
     <link href="https://fonts.googleapis.com/css2?family=Bitter&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     
 </head>
+
+
 <body>
     <div class="full-container top-banner">
         <div class="container">
@@ -24,20 +27,27 @@
             <br>
             <br>
             <a class="button" target="_blank" href="http://cpbook.subeen.com/?fbclid=IwAR0GMp9Mg9NH1hvJjPMd_HxLEP78NR3maRVP1Say28CdpgeEagOae94PBqU">HIRE ME</a>
+
         </div>
         <div class="first-width">
             <img src="img/peter.png" alt="">
         </div>
+
     </section>
+
 </div>
+
 </div>
+
 
 <div class="full-container biography">
     <div class="container">
+
         <section>
             <div class="first-width">
                 <img src="img/peter_dream.png" alt="">
             </div>
+
         <div class="first-width">
             <h1> Biography </h1>
             <br>
@@ -46,13 +56,18 @@
             <br>
             <a class="button" target="_blank" href="http://cpbook.subeen.com/?fbclid=IwAR0GMp9Mg9NH1hvJjPMd_HxLEP78NR3maRVP1Say28CdpgeEagOae94PBqU">DOWNLOAD RSUME</a>
         </div>
+
         </section>
+
     </div>
+
 </div>
 
 <div class="full-container latest-work">
     <div class="container latest">
+
         <section>
+
             <H1>My Latest work</H1>
             <div class="img">
                 <img src="img/work-1.png" alt="">
@@ -64,18 +79,20 @@
                 <img src="img/work-3.jpg" alt="">
             </div>
         </section>
+
+
     </div>
 </div>
 
 <div class="full-container">
     <div class="container">
+
         <section>
+
         <div>
             <h1 style="text-align: center;font-family:'Courier New', Courier, monospace;font-weight: bold;">What client are say </h1>
             <br>
         </div>
-
-
 
         <div class="full-container fotter-background">
             <div class="container">
